# viex

./: .gitignore  Anchor.toml  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  docker-compose.yml  jest.config.js  package-lock.json  package.json
backend/src/: app.ts  config.ts  server.ts
backend/src/middleware/: auth.ts  error.ts
backend/src/routes/: compliance.ts  events.ts  health.ts  kyc.ts  operations.ts  roles.ts  stablecoin.ts  supply.ts  travel-rule.ts  treasury.ts
backend/src/services/: compliance.ts  events.ts  kyc.ts  (+1 more)
backend/tests/: api.test.ts
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
idl/: viex_transfer_hook.json  viex_transfer_hook.ts  viex_treasury.json  viex_treasury.ts
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
programs/viex-treasury/: Cargo.toml
programs/viex-treasury/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/viex-treasury/src/instructions/: allowlist.rs  burn.rs  compliance.rs  convert.rs  freeze.rs  initialize.rs  kyc.rs  metadata.rs  mint.rs  mod.rs  oracle.rs  pause.rs  roles.rs  travel_rule.rs  treasury.rs
scripts/: demo.sh
sdk/core/: README.md  package-lock.json  package.json  tsconfig.json
tests/: compliance.ts  cross-border.ts  treasury.ts
(+42 files in other folders)
